# civicrecords-ai

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  QA-VERIFICATION-REPORT.docx  README.docx  README.md  README.txt  SECURITY.md  SUPPORT.md  USER-MANUAL.docx  USER-MANUAL.md  USER-MANUAL.txt  docker-compose.gpu.yml  docker-compose.host-ollama.yml  docker-compose.yml  install.ps1  install.sh  temp_task4_code.tsx
backend/: README.md  pyproject.toml  test_results_full.txt
backend/alembic/versions/: 001_initial.py  002_documents.py  003_model_registry.py  004_search.py  005_requests.py  006_exemptions.py  008_extend_request_status_enum.py  009_fee_waivers.py  010_remove_sent_status.py  011_fix_schema_drift.py  012_add_liaison_public_roles.py  013_add_connector_types.py  014_p6a_idempotency.py  015_p6b_scheduler.py  016_p7_sync_failures.py  017_rename_connector_enum_values.py  020_phase2_consumer_app_backfill.py  021_first_admin_password_rotation.py
backend/app/: config.py  database.py  main.py  worker.py
backend/app/admin/: router.py
backend/app/analytics/: router.py
backend/app/audit/: __init__.py  logger.py  middleware.py  router.py
backend/app/auth/: dependencies.py  manager.py  router.py  suite_session.py
backend/app/catalog/: loader.py  router.py
backend/app/city_profile/: router.py
backend/app/connectors/: __init__.py  base.py  file_system.py  imap_email.py  rest_api.py
backend/app/datasources/: __init__.py  router.py  sync_failures_router.py
backend/app/documents/: __init__.py  router.py
backend/app/exemptions/: __init__.py  engine.py  llm_reviewer.py  router.py
backend/app/ingestion/: __init__.py  embedder.py  llm_extractor.py  pipeline.py  scheduler.py  tasks.py  (+1 more)
backend/data/: systems_catalog.json
backend/scripts/: generate_openapi.py  generate_pdf.py  seed_notification_templates.py  seed_rules.py
backend/tests/: conftest.py  test_admin.py  test_analytics.py  test_at_rest_encryption.py  test_audit.py  test_auth.py  test_base_connector.py  test_bootstrap_integration.py  test_catalog.py  test_chunker.py  test_circuit_breaker.py  test_city_profile.py  test_civiccore_migration_gates.py  test_config_validation.py  test_connector_schemas.py  test_connector_taxonomy.py  test_datasources.py  test_datasources_router_tc.py  test_department_scoping.py  test_docker_secret_contract.py  test_documents.py  test_embedder.py  test_exemption_rules_seed.py  test_exemptions.py  test_fee_lifecycle.py  test_fee_schedules.py  test_fees.py  test_health.py  test_host_validator.py  test_imap_connector.py  test_info_leak_hardening.py  test_ingestion_retry.py  test_ingestion_tasks.py  test_llm_client.py  test_manual_drop.py  test_messages.py  test_migration_014.py  test_migration_015.py  test_model_registry.py  test_notification_dispatch.py  (+32 more)
(+198 files in other folders)
