[project]
name = "civicrecords-ai"
version = "1.4.0"
description = "Open-source AI-powered open records support for American cities"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.44.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.0",
    "pgvector>=0.4.2",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "fastapi-users[sqlalchemy]>=15.0.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "celery>=5.6.0",
    "civiccore @ https://github.com/CivicSuite/civiccore/releases/download/v0.2.0/civiccore-0.2.0-py3-none-any.whl",
    "croniter>=2.0.0",
    "redis>=5.0.0,<8.0.0",
    "httpx>=0.28.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=11.0.0",
    "pytesseract>=0.3.10",
    "aiofiles>=24.1.0",
    "PyJWT>=2.8.0",
    "regex>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "respx>=0.22.0",
    "ruff>=0.11.0",
    "psycopg2-binary>=2.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "portal_mode(mode): T5D — set PORTAL_MODE for this test ('public' or 'private'). See tests/test_portal_mode.py::_portal_mode_override.",
    "integration: Phase 1 — integration test that requires an external runtime (Docker Compose, Alembic, civiccore migration runner). See tests/test_civiccore_migration_gates.py.",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
